---------------------------------------------------------------------------------------------------
Version: 0.10.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.10.2
Date: 2022-11-02
  Changes:
    - The stage move tool's "Bring to current stage" can be activated with reverse-select as well as alt-select.
  Bugfixes:
    - Fixed error when building entities over a preview.
    - Fixed incorrect handling of disallowed entity dollying.
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 2022-10-31
  Bugfixes:
    - Fixed entities not updating after creating "empty" control behavior for belts and inserters.
    - Fixed allowing preview entities to be dollied.
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 2022-10-30
  Features:
    - Added the "Stage Move" tool. See the mod portal description for more info.
  Changes:
    - The "Move entity to current stage" shortcut now works on preview entities, and is ignored on settings remnants.
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2022-10-29
  Changes:
    - Update thumbnail
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2022-10-29
  Changes:
    - The mod has been renamed to "Staged Blueprint Planning" to better reflect its more general usage.
    - "Assemblies" have been renamed to "Staged Builds" (in locale, not in code).
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2022-10-29
  Bugfixes:
    - Fix startup crash with modded entities with size 0 sprites
---------------------------------------------------------------------------------------------------
Version: 0.8.1