@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.10.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix broken state after Q-building.
 ---------------------------------------------------------------------------------------------------
 Version: 0.10.2
 Date: 2022-11-02
